Fix line-height on small text

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -166,6 +166,10 @@ th {
   font-weight: normal;
 }
 
+.small-txt {
+  line-height: 1.2;
+}
+
 @media only screen and (max-width: 479px) {
   table,
   thead,
